# airflow

./: .gitignore
airflow-core/src/airflow/ui/: package.json  pnpm-lock.yaml
providers/keycloak/: provider.yaml  pyproject.toml
providers/keycloak/src/airflow/providers/keycloak/: __init__.py
providers/keycloak/src/airflow/providers/keycloak/auth_manager/: config.py  keycloak_auth_manager.py
providers/keycloak/src/airflow/providers/keycloak/auth_manager/api_fastapi/datamodels/: login.py
providers/keycloak/src/airflow/providers/keycloak/auth_manager/api_fastapi/models/: __init__.py
providers/keycloak/src/airflow/providers/keycloak/auth_manager/api_fastapi/routes/: login.py
providers/keycloak/src/airflow/providers/keycloak/auth_manager/api_fastapi/services/: __init__.py  login.py
providers/keycloak/src/airflow/providers/keycloak/plugins/: keycloak_auth_manager_plugin.py
providers/keycloak/src/airflow/providers/keycloak/ui/: package-lock.json  package.json
providers/keycloak/src/airflow/providers/keycloak/ui/openapi-gen/queries/: common.ts  ensureQueryData.ts  prefetch.ts  queries.ts  suspense.ts
providers/keycloak/src/airflow/providers/keycloak/ui/openapi-gen/requests/: services.gen.ts
providers/keycloak/src/airflow/providers/keycloak/ui/src/: router.tsx
providers/keycloak/src/airflow/providers/keycloak/ui/src/login/: Login.tsx
providers/keycloak/src/airflow/providers/keycloak/ui/src/queries/: useCreateToken.ts
scripts/in_container/: run_generate_openapi_spec_keycloak.py
